--- a/README.qmd
+++ b/README.qmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 # b32
 
 <!-- badges: start -->
-[![extendr](https://img.shields.io/badge/extendr-^0.8.1-276DC2)](https://extendr.github.io/extendr/extendr_api/)
+[![extendr](https://img.shields.io/badge/extendr-^0.8.1-276DC2)](https://extendr.rs/extendr/extendr_api/)
 <!-- badges: end -->
 
 <!-- badges: start -->
